// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning.vue Snapshots > Hideable prop snapshots > should render with hideable false correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Hideable prop snapshots > should render with hideable true correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Language snapshots > should render in English correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Dangerous wind warning for land areas"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="en">Wind warning for land areas</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Wind warning for land areas"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Language snapshots > should render in Finnish correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Language snapshots > should render in Swedish correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Farlig vindvarning för landområden"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="sv">Vind­varning för land­områden</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Vindvarning för landområden"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Severity level snapshots > should render severity level 2 correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Severity level snapshots > should render severity level 3 correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Severity level snapshots > should render severity level 4 correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-4 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Hyvin vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Theme snapshots > should render with dark theme correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table dark-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Theme snapshots > should render with dark-gray theme correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table dark-gray-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Theme snapshots > should render with light theme correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Theme snapshots > should render with light-gray theme correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-gray-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Visibility state snapshots > should render hidden warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-unselected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="false" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">Off</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Visibility state snapshots > should render visible warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render cold weather warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 cold-weather symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen pakkasvaroitus"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Pakkas­varoitus</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-coldWeather" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Pakkasvaroitus"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render flood level warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 flood-level symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tulvavaroitus"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tulva­varoitus</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-floodLevel" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tulvavaroitus"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render forest fire weather warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 forest-fire-weather symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen maastopalovaroitus"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Maastopalo­varoitus</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-forestFireWeather" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Maastopalovaroitus"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render hot weather warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 hot-weather symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen hellevaroitus"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Helle­varoitus</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-hotWeather" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Hellevaroitus"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render pedestrian safety warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 pedestrian-safety symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen jalankulkusää"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Jalankulku­sää</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-pedestrianSafety" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Jalankulkusää"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render rain warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 rain symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen sadevaroitus"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Sade­varoitus</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-rain" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Sadevaroitus"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render sea wind warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 sea-wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus merelle"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus merelle</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-seaWind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus merelle"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render thunderstorm warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-4 thunder-storm symbol-list-image-column symbol-list-image warning-image" aria-label="Hyvin vaarallinen raju ukonilma"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Raju ukon­ilma</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-thunderStorm" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Raju ukonilma"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render traffic weather warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 traffic-weather symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen liikennesää"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Liikenne­sää</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-trafficWeather" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Liikennesää"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue Snapshots > Warning type snapshots > should render wind warning correctly 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text" lang="fi">Tuuli­varoitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;
